# HVOROSTOVA_OSISP_prj_2024

./: CMakeLists.txt  EntityType.h  README.md
command/: Command.cpp  Command.h
entity_managment/: SceneNode.cpp  SceneNode.h
entity_managment/Bullet/: Bullet.cpp  Bullet.h
entity_managment/Entity/: Entity.cpp  Entity.h
player_managment/player/: Player.cpp  Player.h
resource_managment/: Fonts.h  Textures.h
resource_managment/TextureHolder/: ResourceHolder.cpp  ResourceHolder.h
state_managment/: StatesEnum.h
state_managment/state/: State.cpp  State.h
state_managment/state_stack/: StateStack.cpp  StateStack.h
